--- a/.che/project.json
+++ b/.che/project.json
@@ -1,1 +1,1 @@
-{"type":"mta","builders":{"default":"mtabuilder","configs":{}},"runners":{"configs":{}},"attributes":{"sap.watt.common.setting":["{\"hdbInactiveFiles\":{\"inactiveFileList\":[]}}"]},"mixinTypes":[]}
+{"type":"mta","builders":{"default":"mtabuilder","configs":{}},"runners":{"configs":{}},"attributes":{"sap.watt.common.setting":["{\"hdbInactiveFiles\":{\"inactiveFileList\":[\"/MovieLens/db/src/hdb/summary/ratings_user.hdbview\",\"/MovieLens/db/src/hdb/summary/ratings_movie.hdbview\"]}}"]},"mixinTypes":[]}
